# src/JerseyOs.Web/src/types/api.ts
@@ -15,6 +15,9 @@ export type AdjustInventoryDto = components['schemas']['AdjustInventoryRequest']
 export type InventoryDto = components['schemas']['InventoryResponse'];
 export type TaxonomyItemDto = components['schemas']['TaxonomyItemResponse'];
 export type CreateTaxonomyItemDto = components['schemas']['CreateTaxonomyItemRequest'];
+export type PricingRuleDto = components['schemas']['PricingRuleResponse'];
+export type CreatePricingRuleDto = components['schemas']['CreatePricingRuleRequest'];
+export type PricePreviewDto = components['schemas']['PricePreviewResponse'];
 export type SupplierDto = components['schemas']['SupplierResponse'];
 export type CreateSupplierDto = components['schemas']['CreateSupplierRequest'];
 export type SupplierScrapeRunDto = components['schemas']['SupplierScrapeRunResponse'];
